# noUserBots

./: README.md  bot.py  example.env  flake.nix  main.py  pyproject.toml  requirements.txt  start_event.py  vars.py
.github/workflows/: python-app.yml
commands/: ping.py
passive/: msg_watcher.py  start_event.py
persist/: vars.py
