[tool.poetry]
name = "noUserBots"
version = "0.1.0"
description = "Block as-telegram bots"
authors = ["kaeeraa <kaeeraa@nebula-nook.ru>"]
maintainers = ["kaeeraa <kaeeraa@nebula-nook.ru>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/kaeeraa/noUserBots"
repository = "https://github.com/kaeeraa/noUserBots"
documentation = "https://github.com/kaeeraa/noUserBots"
keywords = ["discord", "bot", "protection", "user", "moderation", "server", "automod"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
    "Natural Language :: English",
]

[tool.poetry.extras]
uvloop = ["uvloop"]

[tool.poetry.scripts]
noUserBots = 'noUserBots.main:run'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kaeeraa/noUserBots/issues"
"Changelog" = "https://github.com/kaeeraa/noUserBots/blob/main/CHANGELOG.md"


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
hikari = "^2.1.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
uvloop = "^0.20.0"
mypy = "^1.11.2"
isort = "^5.13.2"
hikari-arc = "^1.3.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = "msg_watcher"
disable_error_code = ["arg-type", "union-attr"]

[[tool.mypy.overrides]]
module = "vars"
disable_error_code = ["arg-type"]
